# Trade-Agent-AngelOneBroker

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  backtest.py  backtest_ensemble.py  changes_done_2026-05-14.md  changes_done_2026-05-18.md  changes_done_2026-05-19.md  config.yaml  conftest.py  docker-compose.stage3.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_daemon.py  stop_daemon.py  trading_agent.py
brokers/: __init__.py  base.py
config_overlays/: stage3.yaml
core/: __init__.py  data_handler.py  ensemble.py  features.py  secrets.py  stock_scanner.py  trade_analyzer.py
data/: event_calendar.csv  slippage_log.csv  trading_agent.db.bak-20260428-174356  training_symbols.txt
deploy/: README.md
docs/: FREEZE_v2.1.md  FREEZE_v2.1_revision.md  README.md  ampere_capacity_watcher_setup.md  backtester_vm_runbook.md  battery_v2_design.md  cloud_mvc_runbook.md  cloud_pod_architecture.md  e2e_broker_test_plan.md  e2e_stage12_postmortem.md  e2e_stage21_postmortem.md  freeze_contingencies.md  freeze_observability_extensions.md  phase_b_hourly_blackout_candidates.md  postmortem_2026-05-13_morning_losses.md  postmortem_phase_a_template.md  restructure_plan.md  stage3_runbook.md  strategy_research_backlog.md
monitoring/: __init__.py  alerts.py
strategies/: base_strategy.py  supertrend_follow.py  vwap_bounce.py
tests/: test_atomic_balance_persistence.py  test_audit_checkpoint.py  test_balance_persistence.py  test_brokers.py  test_cap_constrained_floor_tolerance.py  test_conviction_aware_atr_gate.py  test_daily_risk_state_rehydration.py  test_directional_regime_and_premarket.py  test_ensemble_suppression_normalization.py  test_eod_audit_fixes.py  test_execution.py  test_exit_fast_path.py  test_health_json_and_check.py  test_market_safety.py  test_numpy_json_serialization_fix.py  test_opening_lockout_and_carryover.py  test_post_backtest_2026_05_05_fixes.py  test_rejection_cooldown.py  test_reset_balance_with_open_positions.py  test_risk_manager.py  test_scan_preserves_held_positions.py  test_self_sufficiency_hardening.py  test_short_selling.py  test_silent_failure_guards.py  test_stock_scanner.py  (+8 more)
(+163 files in other folders)
